test-suite/ide/undo012.fake
# Script simulating a dialog between coqide and coqtop -ideslave
# Run it via fake_ide
#
# Test backtracking in presence of nested proofs
#
ADD { Set Nested Proofs Allowed. }
ADD { Lemma aa : True -> True /\ True. }
ADD { intro H. }
ADD { split. }
ADD { Lemma bb : False -> False. }
ADD { intro H. }
ADD { apply H. }
ADD { Qed. }
ADD { apply H. }
ADD { Lemma cc : False -> True. }
ADD { intro H. }
ADD { destruct H. }
ADD { Qed. }
QUERY { Show. }
ADD here { apply H. }
ADD { Qed. }
EDIT_AT here
# We should now be just before the Qed.
QUERY { Fail Check aa. }
QUERY { Check bb. }
QUERY { Check cc. }
ADD { Qed. }
